tests/baselines/reference/privateNamesUnique-4.errors.txt
tests/cases/conformance/classes/members/privateNames/privateNamesUnique-4.ts(6,7): error TS2322: Type 'A2' is not assignable to type 'C'.
  Property '#something' is missing in type 'A1' but required in type 'C'.


==== tests/cases/conformance/classes/members/privateNames/privateNamesUnique-4.ts (1 errors) ====
    class A1 { }
    interface A2 extends A1 { }
    declare const a: A2;
    
    class C { #something: number }
    const c: C = a;
          ~
!!! error TS2322: Type 'A2' is not assignable to type 'C'.
!!! error TS2322:   Property '#something' is missing in type 'A1' but required in type 'C'.
!!! related TS2728 tests/cases/conformance/classes/members/privateNames/privateNamesUnique-4.ts:5:11: '#something' is declared here.
    